updated with demo2 backend, tested alr